# QtCustomKit

./: .gitignore  CMakeLists.txt  README.md
Example/: CMakeLists.txt  mainwindow.cpp
Kits/: CMakeLists.txt
Kits/include/: FlowLayout.h  Kits_global.h
Kits/src/Layout/: FlowLayout.cpp  FlowLayout_p.h
